# sui-dev-mcp

./: Cargo.toml  README.md
src/: main.rs  service.rs
