[package]
name = "sui-dev-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
envy = "0.4.2"
reqwest = { version = "0.12.19", features = ["json"] }
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", rev = "a66f66a", features = ["server", "transport-io", "transport-sse-server"] }
serde = "1.0.219"
serde_json = "1.0.140"
strip-ansi-escapes = "0.2.1"
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = "0.7.15"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
